finalizing the swagger and the middleware
