# server/src/middleware/project.ts
@@ -3,12 +3,12 @@ import _ from 'lodash'
 import * as helper from '../utils/helper'
 
 export const createProjectfromExtern = (req: any, res: any, next: any) => {
-    let projectName = req.body.ProjectName as string;
-    let projectDescription = req.body.ProjectDescription as string;
-    let illustrationName = req.body.IllustrationName as string;
-    let illustrationType = req.body.IllustrationType as string;
-    let tags = req.body.Tags as string[];
-    let illustrationData = req.body.IllustrationData as any;
+    let projectName = req.body.projectName as string;
+    let projectDescription = req.body.description as string;
+    let illustrationName = req.body.name as string;
+    let illustrationType = req.body.type as string;
+    let tags = req.body.tags as string[];
+    let illustrationData = req.body.data as any;
     projectApi.createProjectfromExtern(projectName, projectDescription, illustrationName, illustrationType, tags, illustrationData, (errGPC: any, data: any) => {
 
         helper.returnResponse(res, errGPC, data, next)
@@ -16,7 +16,7 @@ export const createProjectfromExtern = (req: any, res: any, next: any) => {
 }
 
 export const deleteProjectfromExtern = (req: any, res: any, next: any) => {
-    let projectName = req.body.ProjectName as string;
+    let projectName = req.body.projectName as string;
     projectApi.deleteProject(projectName, (errGPC: any, data: any) => {
 
         helper.returnResponse(res, errGPC, data, next)
@@ -24,8 +24,8 @@ export const deleteProjectfromExtern = (req: any, res: any, next: any) => {
 }
 
 export const updateProjectfromEtern = (req: any, res: any, next: any) => {
-    let projectName = req.body.ProjectName as string;
-    let projectDescription = req.body.ProjectDescription as string;
+    let projectName = req.body.projectName as string;
+    let projectDescription = req.body.description as string;
     projectApi.updateProjectfromEtern(projectName, projectDescription, (errGPC: any, data: any) => {
 
         helper.returnResponse(res, errGPC, data, next)
@@ -33,7 +33,7 @@ export const updateProjectfromEtern = (req: any, res: any, next: any) => {
 }
 
 export const getOneProjectfromEtern = (req: any, res: any, next: any) => {
-    let projectName = req.body.ProjectName as string;
+    let projectName = req.body.projectName as string;
     projectApi.getOneProjectfromEtern(projectName, (errGPC: any, data: any) => {
 
         helper.returnResponse(res, errGPC, data, next)
@@ -41,8 +41,8 @@ export const getOneProjectfromEtern = (req: any, res: any, next: any) => {
 }
 
 export const createIllustryProject = (req: any, res: any, next: any) => {
-    let projectName = req.body.ProjectName as string;
-    let projectDescription = req.body.ProjectDescription as string;
+    let projectName = req.body.name as string;
+    let projectDescription = req.body.description as string;
     let files = _.get(req, 'files');
     // Validate file path
     if (_.isNil(files)) return helper.returnResponse(res, { name: 'invalidParam', message: "uploaded filepath is missing" }, null, next)
@@ -80,7 +80,7 @@ export const findOne = (req: any, res: any, next: any) => {
 
 export const updateProject = (req: any, res: any, next: any) => {
     let projectName = req.params.projectName
-    let projectDescription = req.body.ProjectDescription as string;
+    let projectDescription = req.body.description as string;
     {
         projectApi.updateProject(projectName, projectDescription, (err: any, data: any) => {
             helper.returnResponse(res, err, data, next)
